force-app/main/default/objects/Program_Outcome__c/Program_Outcome__c.object-meta.xml
<CustomObject>
    <label>Program Outcome</label>
    <nameField>
        <label>Program Outcome Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Outcomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>