force-app/main/default/objects/Program_Outcome__c/fields/Program_Outcome_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Outcome_Code__c</fullName>
    <label>Program Outcome Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>