force-app/main/default/objects/Program_Outcome__c/fields/Study_Plan__c.field-meta.xml
<CustomField>
    <fullName>Study_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Plan</label>
    <referenceTo>Study_Plan__c</referenceTo>
    <relationshipLabel>Program Outcomes</relationshipLabel>
    <relationshipName>Program_Outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>