force-app/main/default/objects/Program_Outcome__c/fields/Study_Program_Version__c.field-meta.xml
<CustomField>
    <fullName>Study_Program_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Program Version</label>
    <referenceTo>Study_Program_Version__c</referenceTo>
    <relationshipLabel>Program Outcomes</relationshipLabel>
    <relationshipName>Program_Outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>